fix(style): grid skeleton image size on mobile, too small

--- a/src/components/PlaylistCard/PlaylistCard.css
+++ b/src/components/PlaylistCard/PlaylistCard.css
@@ -46,6 +46,5 @@
 }
 
 .playlist-card__image {
-  width: min(100%, 150px);
   aspect-ratio: 1;
 }
